add basic head attributes

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -3,6 +3,12 @@
     <head>
         <title>Quick Node Tester</title>
         <meta charset="utf-8">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
+        <noscript></noscript>
+        <link rel="stylesheet" href="global.css">
     </head>
     <body>
         <h1>Hello, World!</h1>
