--- a/src/www/index.html
+++ b/src/www/index.html
@@ -3,11 +3,10 @@
     <head>
         <title>Quick Node Tester</title>
         <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="Quick Node Tester">
+        <meta name="keywords" content="nodejs">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
-        <noscript></noscript>
+        <noscript>JavaScript disabled.</noscript>
         <link rel="stylesheet" href="global.css">
     </head>
     <body>
