fix minor typo in index.html

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Quick Node Tester</title>
+        <title>NodeSand</title>
         <meta charset="utf-8">
-        <meta name="description" content="Quick Node Tester">
+        <meta name="description" content="NodeSand">
         <meta name="keywords" content="nodejs">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
-        <noscript>JavaScript disabled.</noscript>
+        <noscript>JavaScript is disabled</noscript>
         <link rel="stylesheet" href="global.css">
     </head>
     <body>
