--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>NodeSand</title>
-        <meta charset="utf-8">
-        <meta name="description" content="NodeSand">
-        <meta name="keywords" content="nodejs">
-        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
-        <noscript>JavaScript is disabled</noscript>
-        <link rel="stylesheet" href="global.css">
-    </head>
-    <body>
-        <h1>Hello, World!</h1>
-    </body>
+	<head>
+		<title>NodeSand</title>
+		<meta charset="utf-8" />
+		<meta name="description" content="NodeSand" />
+		<meta name="keywords" content="nodejs" />
+		<meta
+			name="viewport"
+			content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes"
+		/>
+		<noscript>JavaScript is disabled</noscript>
+		<link rel="stylesheet" href="global.css" />
+	</head>
+	<body>
+		<h1>Hello, World!</h1>
+	</body>
 </html>
